--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -1,3 +1,17 @@
 = Javaslang User Guide
+Robert Winkler <robert.winkler@telekom.de>
+:toc: left
+:toclevels: 3
+:source-highlighter: coderay
+:numbered:
+:hardbreaks:
+:revnumber: {project-version}
+:revdate: {localdate}
+:icons: font
+:pagenums:
 
-This is User Guides
+include::introduction.adoc[]
+include::getting_started.adoc[]
+include::usage_guide.adoc[]
+include::contributing.adoc[]
+include::license.adoc[]
