--- a/src/docs/asciidoc/getting_started.adoc
+++ b/src/docs/asciidoc/getting_started.adoc
@@ -6,19 +6,25 @@ The .jar is available at http://search.maven.org/#search%7Cga%7C1%7Ca:%22javasla
 
 === Gradle
 
+[source,groovy]
+[subs="attributes"]
 ----
-compile "com.javaslang:javaslang:2.0.0-RC1"
+dependencies {
+    compile "com.javaslang:javaslang:{project-version}"
+}
 ----
 
 === Maven
 
-[source,java]
+[source,xml]
 ----
-<dependency>
-    <groupId>com.javaslang</groupId>
-    <artifactId>javaslang</artifactId>
-    <version>2.0.0-RC1</version>
-</dependency>
+<dependencies>
+    <dependency>
+        <groupId>com.javaslang</groupId>
+        <artifactId>javaslang</artifactId>
+        <version>2.0.0-RC1</version>
+    </dependency>
+</dependencies>
 ----
 
 === Standalone
@@ -31,7 +37,7 @@ Developer versions can be found https://oss.sonatype.org/content/repositories/sn
 
 Ensure that your ``~/.m2/settings.xml`` contains the following:
 
-[source,java]
+[source,xml]
 ----
 <profiles>
     <profile>
