Updated documentation and README. Documentation is copied into a release sub folder.

--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -9,6 +9,7 @@ Daniel Dietrich <cafebab3@gmail.com>
 :revdate: {localdate}
 :icons: font
 :pagenums:
+:imagesdir: images
 
 include::introduction.adoc[]
 include::getting_started.adoc[]
